--- a/views/homepage.jade
+++ b/views/homepage.jade
@@ -4,4 +4,5 @@ block content
     h1.
         Home Page
     ul
-        <a href="userlist">Go to User List</a>
+        <a href="searchstatus">Search Status</a>
+        <a href="newstatus">New Status</a>
